minio/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    kubernetes.io/metadata.name: minio
