minio/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  # This name uniquely identifies the service
  name: minio-svc
spec:
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: minio
#  type: LoadBalancer
#  loadBalancerIP: 192.168.3.101
  type: ClusterIP
  ports:
    - name: https
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: https-console
      port: 9001
      targetPort: 9001
      protocol: TCP
